# rcta_manipulation

./: .gitignore  .rosinstall  CMakeLists.txt  package.xml  rcta.rosinstall  readme.md  rosdep.yaml
action/: GraspObject.action  (+5 more)
cmu_manipulation_msgs/: CMakeLists.txt  package.xml
cmu_manipulation_msgs/action/: GraspObjectCommand.action  Manipulate.action  RepositionBaseCommand.action
deprecated/: CMakeLists.txt  package.xml.broken
gascan_grasp_planning/: CMakeLists.txt  gas_canister.yaml  package.xml
gascan_grasp_planning/config/: gascan_grasping.yaml
gascan_grasp_planning/include/gascan_grasp_planning/: gascan_grasp_planner.h
gascan_grasp_planning/launch/: spline_visualizer.launch
gascan_grasp_planning/matplotpp/: CMakeLists.txt  matplotpp.h
gascan_grasp_planning/src/grasping/: gascan_grasp_planner.cpp  gascan_grasp_planner.h
gascan_grasp_planning/src/spline_grasp_generator/: spline_grasp_generator.cpp
grasp_generator_plugin/: CMakeLists.txt  package.xml
grasp_generator_plugin/config/: grasp_generator.yaml
grasp_generator_plugin/plugins/: grasp_generator_plugin.xml
grasp_generator_plugin/src/: grasp_generator_plugin.cpp
grasp_planner_interface/: CMakeLists.txt  package.xml
grasp_planner_interface/include/grasp_planner_interface/: grasp.h  grasp_planner_plugin.h  grasp_utils.h
grasp_planner_interface/src/: grasp_planner_plugin.cpp  grasp_utils.cpp
grasping_executive/: CMakeLists.txt  README.md  package.xml  package.xml.broken
grasping_executive/config/: gascan_grasp_planner.launch.xml  grasp_generator_grasp_planner.launch.xml  grasp_object_executor.yaml  grasp_planner.launch.xml  move_arm_node.yaml
grasping_executive/data/: rr-2014-08-29-16-39-09.bag
grasping_executive/launch/: grasp_object_executor.launch  retrieve_object_simulator.launch  stow_arm.launch
grasping_executive/plugins/: gascan_grasp_planner_plugin.xml
grasping_executive/src/: HDTRobotModel.cpp  HDTRobotModel.h  RetrieveObjectSimulator.h
hdt_control/: CMakeLists.txt  package.xml
hdt_control/launch/: attached_markers.launch  hdt_arm_driver.launch  hdt_arm_teleop.launch  joint_trajectory_action.launch  measure_eef_error.launch  measure_repeatability.launch  track_cal_marker.launch  track_wrist_marker.launch  viservo_control_executor.launch
hdt_control/src/: ErrorMeasurementNode.cpp  FakeMarkerPublisher.cpp
hdt_control_msgs/: CMakeLists.txt  package.xml
hdt_control_msgs/msg/: JointState.msg
hdt_control_rviz_plugins/: CMakeLists.txt  package.xml
hdt_control_rviz_plugins/plugins/: viservo_command_panel_plugin_description.xml
hdt_control_rviz_plugins/src/: TemperatureStatusPanel.cpp  TemperatureStatusPanel.h  TemperatureStatusPanelWidget.ui  controller_status_panel_widget.cpp  controller_status_panel_widget.h  teleop_status_panel.h  viservo_command_panel.cpp  viservo_command_panel.h
hdt_kinematics/: CMakeLists.txt  package.xml
hdt_kinematics/scripts/: generate_ikfast.py
hdt_kinematics/src/: RobotModel.cpp  forward_velocities.cpp  hdt_arm_transform6d.cpp  kinematics.cpp  kinematics.h
hdt_manipulation/: CMakeLists.txt  package.xml
hdt_manipulation/launch/: manipulation.launch  retrieve_object_simulator.launch  stow_arm.launch
hdt_manipulation/src/: HDTRobotModel.cpp  HDTRobotModel.h
hdt_moveit_config/: CMakeLists.txt  package.xml
kdl_kinematics_plugin/: CMakeLists.txt  kdl_kinematics_plugin_description.xml  package.xml
kdl_kinematics_plugin/src/: chainiksolver_pos_nr_jl_mimic.cpp  chainiksolver_pos_nr_jl_mimic.hpp  chainiksolver_vel_pinv_mimic.cpp  chainiksolver_vel_pinv_mimic.hpp  kdl_kinematics_plugin.cpp  kdl_kinematics_plugin.h
manipulation_executive/: CMakeLists.txt  package.xml
manipulation_executive/src/: manipulation_executive.cpp
object_detection/: CMakeLists.txt  package.xml.broken  training_kdtree.idx
object_detection/launch/: hdt_pick_and_place.launch  hdt_train_object_pose_estimation.launch
object_detection/pick_and_place_node/: PickAndPlaceNode.h  hdt_pick_and_place.cpp
object_manipulation_planner/: CMakeLists.txt  README.md  package.xml
object_manipulation_planner/action/: ManipulateObject.action
object_manipulation_planner/config/: roman_object_manipulator.srdf  rosconsole.properties  smpl_visual.ini
object_manipulation_planner/data/: manipulation-10degs.csv  manipulation.csv  manipulation_angle2.csv  manipulation_left_0.1.csv  manipulation_right_0.1.csv  rcta-roman-client-demonstration-trimmed.csv
object_manipulation_planner/launch/: door_demonstrator.launch  manipulate_object.launch  manipulate_object_params.launch  object_manip_planner_node.launch  object_manip_planner_params.launch  planning_context.launch.xml  simple_crate_planner.launch  upload_cabinet.launch  upload_crate.launch
object_manipulation_planner/meshes/: crate_full.stl
object_manipulation_planner/old/: crate_demo_20180811.csv
object_manipulation_planner/robots/: roman_crate_manipulator.urdf.xacro  upload_roman_crate_manipulator.launch
object_manipulation_planner/scripts/: gentests.py
object_manipulation_planner/src/: assert.h  cabinet_model.cpp  cabinet_model.h  call_planner_fcl.cpp  door_demonstrator.cpp  echo_display_traj.cpp  make_cabinet_urdf.cpp  manipulate_object.cpp  object_manip_checker.cpp  object_manip_heuristic.cpp  object_manip_heuristic.h  object_manip_model.cpp  object_manip_planner.cpp  object_manip_planner.h  object_manip_planner_node.cpp  object_manipulation_model.cpp  object_manipulation_model.h  roman_object_manip_lattice.cpp  roman_object_manip_lattice.h  roman_workspace_lattice_action_space.cpp  roman_workspace_lattice_action_space.h  roman_workspace_lattice_egraph.cpp  roman_workspace_lattice_egraph.h  simple_crate_planner.cpp  test_object_manip_planner.cpp  transform_demo.cpp  translate_demo.cpp  variables.h  workspace_lattice_egraph_roman.cpp  workspace_lattice_egraph_roman.h
object_manipulation_planner/tests/: test-1.yaml  test-10.yaml  test-2.yaml  test-3.yaml  test-4.yaml  test-5.yaml  test-6.yaml  test-7.yaml  test-8.yaml  test-9.yaml
object_manipulation_planner/urdf/: cabinet.urdf  crate.urdf
(+1175 files in other folders)
