<?xml version="1.0"?>
<package>
	<name>cmu_manipulation_msgs</name>
	<version>0.0.0</version>
	<description>The cmu_manipulation_msgs package</description>

	<author email="andrew.dornbush@gmail.com">Andrew Dornbush</author>
	<maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>

	<license>TODO</license>

  	<buildtool_depend>catkin</buildtool_depend>\

  	<build_depend>actionlib</build_depend>
  	<build_depend>actionlib_msgs</build_depend>
  	<build_depend>geometry_msgs</build_depend>
  	<build_depend>octomap_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>trajectory_msgs</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>trajectory_msgs</build_depend>

  	<run_depend>actionlib</run_depend>
  	<run_depend>actionlib_msgs</run_depend>
  	<run_depend>geometry_msgs</run_depend>
  	<run_depend>octomap_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>trajectory_msgs</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>trajectory_msgs</run_depend>

  	<export>
  	</export>
</package>
