<?xml version="1.0"?>
<package format="2">
	<name>cmu_manipulation_msgs</name>
	<version>0.0.0</version>
	<description>The cmu_manipulation_msgs package</description>

	<author email="andrew.dornbush@gmail.com">Andrew Dornbush</author>
	<maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>

	<license>BSD</license>

  	<buildtool_depend>catkin</buildtool_depend>\

	<depend>moveit_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>std_msgs</depend>
	<depend>trajectory_msgs</depend>
  	<depend>actionlib</depend>
  	<depend>actionlib_msgs</depend>
  	<depend>geometry_msgs</depend>
  	<depend>octomap_msgs</depend>
</package>
