<?xml version="1.0"?>
<package format="2">
    <name>grasp_planner_interface</name>
    <version>0.0.0</version>
    <description>The grasp_planner_interface package</description>
    <author email="andrew.dornbush@gmail.com">Andrew Dornbush</author>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>eigen</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
</package>
